--- a/trunk/ImageLabelerClient/src/main/java/br/ita/ces31/imagelabeler/client/ui/screen/GameScreen.form
+++ b/trunk/ImageLabelerClient/src/main/java/br/ita/ces31/imagelabeler/client/ui/screen/GameScreen.form
@@ -30,19 +30,21 @@
                       <Component id="pnlImage" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="pnlTypedLabels" pref="135" max="32767" attributes="1"/>
+                          <Component id="pnlTypedLabels" pref="143" max="32767" attributes="1"/>
                           <Group type="102" attributes="0">
                               <Component id="lblPoints" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblPointsAmmount" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="lblLetsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtLabel" alignment="0" min="-2" pref="135" max="-2" attributes="1"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblTimeRemaining" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblRegressiveCounting" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="lblSeconds" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="txtLabel" alignment="0" pref="143" max="32767" attributes="1"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -55,10 +57,11 @@
                       <Component id="lblPlayer2" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblMatches" min="-2" max="-2" attributes="0"/>
-                  <Component id="pnlMatchedLabels" pref="131" max="32767" attributes="1"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="lblMatches" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="pnlMatchedLabels" alignment="0" pref="127" max="32767" attributes="1"/>
+                  <Component id="btnPenico" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -86,17 +89,26 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
+                                  <Group type="102" alignment="1" attributes="0">
                                       <Component id="txtLabel" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="32767" attributes="0"/>
                                       <Component id="pnlTypedLabels" min="-2" pref="189" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="pnlMatchedLabels" pref="215" max="32767" attributes="1"/>
+                              </Group>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" attributes="0">
                                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="lblTimeRemaining" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblSeconds" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblRegressiveCounting" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <Component id="pnlMatchedLabels" pref="257" max="32767" attributes="1"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="btnPenico" min="-2" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                       </Group>
@@ -237,6 +249,20 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="60"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblSeconds">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+        <Property name="text" type="java.lang.String" value="s"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnPenico">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Penico"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPenicoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
