--- a/trunk/ImageLabelerClient/src/main/java/br/ita/ces31/imagelabeler/client/ui/screen/PartnerFoundScreen.form
+++ b/trunk/ImageLabelerClient/src/main/java/br/ita/ces31/imagelabeler/client/ui/screen/PartnerFoundScreen.form
@@ -32,8 +32,12 @@
                       <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="lblPartnerFound" pref="288" max="32767" attributes="0"/>
+                      <Component id="lblPartnerFound" pref="290" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
+                      <Component id="lblPartnerName" min="-2" pref="68" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="lblCountingMessage1" min="-2" pref="157" max="-2" attributes="0"/>
@@ -41,14 +45,9 @@
                       <Component id="lblRegressiveCounting" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="lblCountingMessage2" min="-2" pref="81" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace pref="34" max="32767" attributes="0"/>
                   </Group>
               </Group>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
-              <Component id="lblPartnerName" min="-2" pref="68" max="-2" attributes="0"/>
-              <EmptySpace pref="122" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,15 +55,15 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="lblPartnerFound" min="-2" pref="14" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
               <Component id="lblPartnerName" min="-2" pref="13" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblCountingMessage2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblRegressiveCounting" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblCountingMessage1" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
+                  <Component id="lblCountingMessage1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
               <Component id="btnPenico" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
