--- a/trunk/ImageLabelerClient/src/main/java/br/ita/ces31/imagelabeler/client/ui/screen/GameScreen.form
+++ b/trunk/ImageLabelerClient/src/main/java/br/ita/ces31/imagelabeler/client/ui/screen/GameScreen.form
@@ -195,6 +195,7 @@
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
               <StringArray count="0"/>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JList(typedLabelsElements)"/>
@@ -216,6 +217,7 @@
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
               <StringArray count="0"/>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JList(matchedLabelsElements)"/>
